WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148491
REGRESSION: Safari navigates after a cancelled force click
https://bugs.webkit.org/show_bug.cgi?id=148491
Summary
REGRESSION: Safari navigates after a cancelled force click
Beth Dakin
Reported
2015-08-26 14:24:55 PDT
REGRESSION: Safari navigates after a cancelled force click
rdar://problem/22394323
Attachments
Patch
(6.61 KB, patch)
2015-08-26 14:38 PDT
,
Beth Dakin
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2015-08-26 14:38:14 PDT
Created
attachment 259982
[details]
Patch
Beth Dakin
Comment 2
2015-08-26 14:51:44 PDT
Thanks Tim!
http://trac.webkit.org/changeset/188990
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug